--- a/style.css
+++ b/style.css
@@ -149,6 +149,8 @@ footer {
   display: flex;
   justify-content: center;
   gap: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .bottom-nav a {
   color: white;
